Cambio en el contenido

--- a/Myblog.html
+++ b/Myblog.html
@@ -39,7 +39,7 @@
             <p>Ya estan fuera de control</p>
             <img src="img/693426.png" width="400"/>
             <p>Antes los villanos atacavan donde, cuando y como sea a las personas y robaban y mataban, pero ahora
-                han formado toda una liga bajo las ordenes del enemigo eterno de All Maight y esa persona es 
+                han formado toda una liga bajo las ordenes del enemigo eterno de ALL MAIGHT y esa persona es 
                 ALL FOR ONE y ahora todos los heroes se han movilizado para derrotarlos lo mas proto posible
                 para que no sean un problema mucho mayor en un futuro. </p>
         </article>
