--- a/Myblog.html
+++ b/Myblog.html
@@ -46,8 +46,8 @@
     </section>
     <footer>
         <section>
-            <a class="polo" href="#titulo">Volver al Inicio</a><b> |  
-            <a class="pala" target="_blank" href="https://t.me/+WgsPu5uInRw3M2Ex">Invitacion del canal de Telegram</a> 
+            <a href="#titulo">Volver al Inicio</a><b> |  
+            <a target="_blank" href="https://t.me/+WgsPu5uInRw3M2Ex">Invitacion del canal de Telegram</a> 
         </section>
        <p>Mi primer blog 2/3/2023</p>
     </footer>
