Los nuevos Cambios

--- a/El nuevo Curriculum.html
+++ b/El nuevo Curriculum.html
@@ -17,16 +17,19 @@
             <h2>Alam Guillermo</h2>
     </section>
             <section> 
-                <h3>Fecha de Nacimiento: </h3><p>20/12/2007 </p>
+                <h3>* Fecha de Nacimiento: </h3><p> 20/12/2007 </p>
             </section>
                 <section>
-                    <h3>Llamadas de Emergencias: </h3><p>809-436-7767 ' | '  809-437-7767 ' | ' 829-412-7767 ' | ' 849-229-5728</p>
+                    <h3>* Telefonos de Sugerencias: </h3><p> 809-436-7767 ' | '  809-437-7767 ' | ' 829-412-7767 ' | ' 849-229-5728</p>
                 </section>
+                    <section>
+                        <img src="El verdadero.png" height="400" width="400"/>
+                    </section>
     <footer>
                     <section>
                         <a href="#titulo">Inicio del Curriculum</a><b> 
                     </section>
-                    <p>Mi Segundo Curriculum 21/3/2023</p>
+                    <p>AlamG.20- 21/3/2023</p>
     </footer>
 </body>
 </html>
